--- a/timeline.html
+++ b/timeline.html
@@ -6,6 +6,7 @@
   <script src="http://d3js.org/d3.v3.js"></script>
 
   <script src="scripts/initialization.js"></script>
+  <script src="scripts/fakeRealAPI.js"></script>
   <script src="scripts/dataManipulation.js"></script>
   <script src="scripts/render.js"></script>
   <script>
