--- a/timeline.html
+++ b/timeline.html
@@ -9,6 +9,7 @@
   <script src="scripts/fakeRealAPI.js"></script>
   <script src="scripts/dataManipulation.js"></script>
   <script src="scripts/render.js"></script>
+  <script src="scripts/deliveryDetail.js"></script>
   <script>
     "use strict";
     console.log('Version 04 02 2016');
