timeline title fix

--- a/timeline2.html
+++ b/timeline2.html
@@ -9,9 +9,10 @@
                 margin: auto;
                 margin-top:25px;
                 margin-bottom:35px;
-                width:209px;
+                width:230px;
                 color:#BFFFEA;
                 font-size: 20px;
+                white-space: nowrap;
             }
             body{
                 font-family: 'Maven Pro', sans-serif;
