lots of progress towards substeps

--- a/timeline.html
+++ b/timeline.html
@@ -8,6 +8,7 @@
 
   <script src="scripts/initialization.js"></script>
   <script src="scripts/fakeRealAPI.js"></script>
+  <script src="scripts/helpers.js"></script>
   <script src="scripts/dataManipulation.js"></script>
   <script src="scripts/render.js"></script>
   <script src="scripts/deliveryDetail.js"></script>
