--- a/timeline.html
+++ b/timeline.html
@@ -7,7 +7,7 @@
   <script src="http://d3js.org/d3.v3.js"></script>
 
   <script src="scripts/initialization.js"></script>
-  <script src="scripts/fakeRealAPI.js"></script>
+  <script src="scripts/fakeRealAPI2.js"></script>
   <script src="scripts/helpers.js"></script>
   <script src="scripts/dataManipulation.js"></script>
   <script src="scripts/render.js"></script>
@@ -15,7 +15,6 @@
   <script>
     "use strict";
     console.log('Version 04 02 2016');
-
     var xAxisTranslation = d3.behavior.zoom()
       .scaleExtent([1, 1])
       .translate([startingX,0])
