--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <script src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
-  <script src="http://d3js.org/d3.v3.js"></script>
 
+  <script src="scripts/jquery-2.2.2.min.js"></script>
+  <script src="scripts/d3.v3.min.js"></script>
   <script src="scripts/initialization.js"></script>
   <script src="scripts/helpers.js"></script>
   <script src="scripts/dataManipulation.js"></script>
