--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="scripts/vendor/d3.v3.min.js"></script>
 
   <script src="scripts/initialization.js"></script>
-  <script src="scripts/helpers.js"></script>
+  <script src="scripts/utils.js"></script>
   <script src="scripts/dataManipulation.js"></script>
   <script src="scripts/render.js"></script>
   <script src="scripts/deliveryDetail.js"></script>
