--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <script src="scripts/vendor/jquery-2.2.2.min.js"></script>
   <script src="scripts/vendor/lodash.4.14.2.min.js"></script>
-  <script src="scripts/vendor/d3.v3.min.js"></script>
+  <script src="scripts/vendor/d3-3.5.17.min.js"></script>
 
   <script src="scripts/initialization.js"></script>
   <script src="scripts/utils.js"></script>
