Add a refresh button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <Script src="scripts/main.js"></script>
 
   <body>
-    <h1 class="title">LIMERICK DASHBOARD</h1>
+    <div class='title-container'>
+      <h1 class="title">LIMERICK DASHBOARD</h1>
+      <img id="refresh-button" class='refresh-button' />
+    </div>
   </body>
 </html>
 
