--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
   <script src="scripts/vendor/jquery-2.2.2.min.js"></script>
   <script src="scripts/vendor/lodash.4.14.2.min.js"></script>
