Fix styling on IE
- refresh button
- and time arrival and delta time

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <meta charset="utf-8">
-  <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+<meta charset="utf-8">
+<link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script src="scripts/vendor/jquery-2.2.2.min.js"></script>
+<script src="scripts/vendor/lodash.4.14.2.min.js"></script>
+<script src="scripts/vendor/d3-3.5.17.min.js"></script>
+<script src="scripts/vendor/moment-2.14.1.min.js"></script>
 
-  <script src="scripts/vendor/jquery-2.2.2.min.js"></script>
-  <script src="scripts/vendor/lodash.4.14.2.min.js"></script>
-  <script src="scripts/vendor/d3-3.5.17.min.js"></script>
-  <script src="scripts/vendor/moment-2.14.1.min.js"></script>
+<script src="scripts/initialization.js"></script>
+<script src="scripts/utils.js"></script>
+<script src="scripts/dataManipulation.js"></script>
+<script src="scripts/render.js"></script>
+<script src="scripts/deliveryDetail.js"></script>
 
-  <script src="scripts/initialization.js"></script>
-  <script src="scripts/utils.js"></script>
-  <script src="scripts/dataManipulation.js"></script>
-  <script src="scripts/render.js"></script>
-  <script src="scripts/deliveryDetail.js"></script>
+<Script src="scripts/main.js"></script>
 
-  <Script src="scripts/main.js"></script>
-
-  <body>
-    <div class='title-container'>
-      <h1 class="title">LIMERICK DASHBOARD</h1>
-      <img id="refresh-button" class='refresh-button' />
+<body>
+    <div class='row title-container'>
+        <h1 class="title">LIMERICK DASHBOARD</h1>
+        <img src="./img/btn-refresh-norm.png" id="refresh-button" class='refresh-button pull-right' />
     </div>
-  </body>
-</html>
+</body>
 
+</html>
